--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>test</title>
-</head>
-<body>
-tsttsfsds
-</body>
-</html>
+{{ > header}}
+<h1>HELLO</h1>
+{{ > footer}}
