--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,16 @@
 {{ > header}}
-<h1>HELLO</h1>
+<div class="container" >
+
+<div class="row">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4 ">
+        <a class="btn btn-block btn-success ">Inscription</a>
+        <small class="text-primary">Déjà inscrit ?</small>
+        <a class="btn btn-block btn-outline-success">Connexion</a>
+    </div>
+</div>
+
+</div>
 {{ > footer}}
