--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,9 @@
 
     </div>
     <div class="col-4 ">
-        <a class="btn btn-block btn-success ">Inscription</a>
+        <a class="btn btn-block btn-success" href="/new_user">Inscription</a>
         <small class="text-primary">Déjà inscrit ?</small>
-        <a class="btn btn-block btn-outline-success">Connexion</a>
+        <a class="btn btn-block btn-outline-success" href="/login">Connexion</a>
     </div>
 </div>
 
