--- a/views/new_user.html
+++ b/views/new_user.html
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <label for="phone">Mot de passe</label>
-        <input name="phone" type="text" class="form-control" id="phone">
+        <input name="phone" type="number" class="form-control" id="phone">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
