--- a/views/login.html
+++ b/views/login.html
@@ -2,8 +2,8 @@
 
 <form method="post" action="/login">
     <div class="form-group">
-        <label for="userName">Nom d'utilisateur</label>
-        <input name="name" type="text" class="form-control" id="userName">
+        <label for="user_login">Nom d'utilisateur</label>
+        <input name="user_login" type="text" class="form-control" id="user_login">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Mot de passe</label>
