--- a/views/header.html
+++ b/views/header.html
@@ -30,10 +30,9 @@
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        {{#authentificated}}
+        <a class="btn btn-danger" href="/logout">Déconnexion</a>
+        {{/authentificated}}
     </div>
 </nav>
 
