--- a/views/login.html
+++ b/views/login.html
@@ -1,9 +1,10 @@
 {{> header}}
+
 <div class="container">
     <form method="post" action="/login">
         <div class="form-group">
-            <label for="userName">Nom d'utilisateur</label>
-            <input name="name" type="text" class="form-control" id="userName">
+            <label for="user_login">Nom d'utilisateur</label>
+            <input name="user_login" type="text" class="form-control" id="user_login">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
@@ -11,5 +12,6 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-<div>
+</div>
+
 {{> footer}}
