--- a/views/new_user.html
+++ b/views/new_user.html
@@ -2,23 +2,31 @@
 <div class="container">
     <form method="post" action="/new_user">
         <div class="form-group">
-            <label for="userName">Nom d'utilisateur</label>
-            <input name="name" type="text" class="form-control" id="userName">
+            <label for="user_login">Identifiant</label>
+            <input name="user_login" type="text" class="form-control" id="user_login">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
             <input name="password" type="password" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="form-group">
-            <label for="city">Mot de passe</label>
+            <label for="name">Prénom</label>
+            <input name="name" type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+            <label for="surname">Nom</label>
+            <input name="surname" type="text" class="form-control" id="surname">
+        </div>
+        <div class="form-group">
+            <label for="city">Ville</label>
             <input name="city" type="text" class="form-control" id="city">
         </div>
         <div class="form-group">
-            <label for="email">Mot de passe</label>
+            <label for="email">Email</label>
             <input name="email" type="email" class="form-control" id="email">
         </div>
         <div class="form-group">
-            <label for="phone">Mot de passe</label>
+            <label for="phone">Numéro de téléphone</label>
             <input name="phone" type="text" class="form-control" id="phone">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
