--- a/views/login.html
+++ b/views/login.html
@@ -2,8 +2,12 @@
 
 <div class="container">
     <form method="post" action="/login">
+        {{#isFail}}
+        <small class="text-danger">Identifiant ou mot de passe incorrect</small>
+        {{/isFail}}
         <div class="form-group">
-            <label for="user_login">Nom d'utilisateur</label>
+
+            <label for="user_login">Identifiant</label>
             <input name="user_login" type="text" class="form-control" id="user_login">
         </div>
         <div class="form-group">
