--- a/views/new_user.html
+++ b/views/new_user.html
@@ -2,8 +2,8 @@
 <div class="container">
     <form method="post" action="/new_user">
         <div class="form-group">
-            <label for="user_login">Identifiant</label>
-            <input name="user_login" type="text" class="form-control" id="user_login">
+            <label for="email">Email (sera votre identifiant)</label>
+            <input name="email" type="email" class="form-control" id="email">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
@@ -20,10 +20,6 @@
         <div class="form-group">
             <label for="city">Ville</label>
             <input name="city" type="text" class="form-control" id="city">
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input name="email" type="email" class="form-control" id="email">
         </div>
         <div class="form-group">
             <label for="phone">Numéro de téléphone</label>
