--- a/views/new_user.html
+++ b/views/new_user.html
@@ -3,7 +3,7 @@
     <form method="post" action="/new_user">
         <div class="form-group">
             <label for="email">Email (sera votre identifiant)</label>
-            <input name="email" type="email" class="form-control" id="email">
+            <input name="mail" type="email" class="form-control" id="email">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
