--- a/views/header.html
+++ b/views/header.html
@@ -23,15 +23,12 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
         </ul>
         {{#authentificated}}
         <a class="btn btn-danger" href="/logout">Déconnexion</a>
+        {{/authentificated}}
+        {{^authentificated}}
+        <a class="btn btn-success" href="/login">Connexion</a>
         {{/authentificated}}
     </div>
 </nav>
