--- a/views/profile.html
+++ b/views/profile.html
@@ -7,15 +7,19 @@
     <hr>
     <div class="row text-center ">
         <div class="col">
-            {{mail}}
+            <small>Mail&nbsp:</small><br>
+           {{mail}}
         </div>
         <div class="col">
+            <small>Nom complet&nbsp:</small><br>
             {{name}}&nbsp{{surname}}
         </div>
         <div class="col">
+            <small>Ville&nbsp:</small><br>
             {{city}}
         </div>
         <div class="col">
+            <small>Tel&nbsp:</small><br>
             {{phone}}
         </div>
         <div class="col">
@@ -27,14 +31,14 @@
         <div class="col-12 col-md-6" style="background-color: #B0F2B6">
             <div class="d-flex justify-content-between">
                 <h3 >Besoins</h3>
-                <a class="btn"><img src="/img/plus.png" width="100%"></a>
+                <a class="btn btn-outline-dark"  style="border : 0;"><img src="/img/plus.png" width="100%"></a>
             </div>
 
         </div>
         <div class="col-12 col-md-6" style="background-color: #FF6961">
             <div class="d-flex justify-content-between">
                 <h3>Surplus</h3>
-                <a class="btn"><img src="/img/plus.png" width="100%"></a>
+                <a class="btn btn-outline-dark" style="border : 0;"><img src="/img/plus.png" width="100%"></a>
             </div>
 
         </div>
