--- a/views/login.html
+++ b/views/login.html
@@ -7,11 +7,11 @@
         {{/isFail}}
         <div class="form-group">
             <label for="mail">Email</label>
-            <input name="mail" type="email" class="form-control" id="mail">
+            <input name="mail" type="email" class="form-control" id="mail" required>
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword1">
+            <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
