--- a/views/profile.html
+++ b/views/profile.html
@@ -23,7 +23,7 @@
             {{phone}}
         </div>
         <div class="col">
-            <a class="btn btn-block btn-outline-dark">Modifier</a>
+            <a href="/edit-profile" class="btn btn-block btn-outline-dark">Modifier</a>
         </div>
     </div>
     <hr>
