--- a/views/login.html
+++ b/views/login.html
@@ -3,11 +3,11 @@
 <div class="container">
     <form method="post" action="/login">
         {{#isFail}}
-        <small class="text-danger">Email ou mot de passe incorrect</small>
+        <small class="text-danger">Identifiant ou mot de passe incorrect</small>
         {{/isFail}}
         <div class="form-group">
-            <label for="mail">Email</label>
-            <input name="mail" type="email" class="form-control" id="mail" required>
+            <label for="mail">Identifiant (Email)</label>
+            <input name="mail" type="email" class="form-control" id="mail">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Mot de passe</label>
