--- a/views/header.html
+++ b/views/header.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav mr-auto">
             {{#authentificated}}
             <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/profile">Profil <span class="sr-only">(current)</span></a>
             </li>
             {{/authentificated}}
             {{#administrator}}
