--- a/views/home.html
+++ b/views/home.html
@@ -15,6 +15,31 @@
         </div>
         {{/peoples}}
     </div>
+    <hr>
+    <h2>Chercher un objet</h2>
+    <form method="post" action="/search">
+        <div class="form-group row">
+            <label for="category" class="col-sm-2 col-form-label">Catégorie</label>
+            <div class="col-sm-10">
+                <select class="form-control" id="category" name="category">
+                    {{#categories}}
+                    <option>{{name}}</option>
+                    {{/categories}}
+                </select>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="object" class="col-sm-2 col-form-label">Objet</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="object" name="object">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </div>
+        </div>
+    </form>
 
 </div>
 
