--- a/views/home.html
+++ b/views/home.html
@@ -2,15 +2,17 @@
 
 <div class="container text-center">
 
-    <h1>Ces profils correspondent à vos besoins</h1>
+    <h1>Ce(s) profil(s) correspond(ent) à vos besoins</h1>
     <hr>
-    <div class="card-deck">
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5">
         {{#peoples}}
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{object}}</h5>
-                <p class="card-text">{{user.name}}</p>
-                <a href="/user/{{user.id}}" class="btn btn-primary">Voir le profil</a>
+        <div class="col mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{object}}</h5>
+                    <p class="card-text">{{user.name}}</p>
+                    <a href="/user/{{user.id}}" class="btn btn-primary">Voir le profil</a>
+                </div>
             </div>
         </div>
         {{/peoples}}
@@ -23,7 +25,7 @@
             <div class="col-sm-10">
                 <select class="form-control" id="category" name="category">
                     {{#categories}}
-                    <option>{{name}}</option>
+                    <option>{{category}}</option>
                     {{/categories}}
                 </select>
             </div>
@@ -36,7 +38,7 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Chercher</button>
             </div>
         </div>
     </form>
