--- a/views/profile.html
+++ b/views/profile.html
@@ -66,7 +66,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form>
+                <form method="post" action="/add-new-exchange">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Nom de l'objet</label>
