correction de la recherche d'objet par nom et categorie

--- a/views/home.html
+++ b/views/home.html
@@ -8,8 +8,8 @@
         <div class="col mb-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{object}}</h5>
-                    <p class="card-text">{{user.name}}</p>
+                    <h5 class="card-title">{{user.surname}} {{user.name}}</h5>
+                    <p class="card-text">{{object}}</p>
                     <a href="/user/{{user.id}}" class="btn btn-primary">Voir le profil</a>
                 </div>
             </div>
