--- a/views/find.html
+++ b/views/find.html
@@ -1,14 +1,14 @@
 {{> header}}
 
-<div class="container">
+<div class="container text-center">
     <h1>Les personnes trouvées</h1>
     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5">
         {{#peoples}}
         <div class="col mb-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{object}}</h5>
-                    <p class="card-text">{{user.name}}</p>
+                    <h5 class="card-title">{{user.surname}} {{user.name}}</h5>
+                    <p class="card-text">{{object}}</p>
                     <a href="/user/{{user.id}}" class="btn btn-primary">Voir le profil</a>
                 </div>
             </div>
