Fin de l'ajout de besoins/surplus

--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,30 @@
 {{ > header}}
-<div class="container">
+<div class="container-fluid row" style="margin: 0!important;padding: 0 !important">
+    <div class="col-12 col-md-10 row" id="myWelcomeDiv"  style="height: 92vh; background-image: url('https://source.unsplash.com/1800x1080/?object');object-fit: cover;width: 100%;">
+        <div class="col-2"></div>
+        <div class="col-8 text-center">
+            <div  style="background: white;border-radius: 5px;margin-top: 30%;padding: 20px; ">
+                <h2>uGive</h2>
+                <img src="/img/logo_projet.svg" width="20%">
+                <p>Trouvez les objets dont vous avez besoin dans les propositions de dons des autres utilisateurs</p>
+            </div>
 
-<div class="row">
-    <div class="col-4">
+        </div>
+    </div>
+    <div class="col-12 col-md-2  container">
+        <div style="margin-top:30%;margin-bottom: 20px" >
+            <a class="btn btn-block btn-success" href="/new_user">Inscription</a>
+
+            <a style="margin-top:30%"  class="btn btn-block btn-outline-success" href="/login">Connexion</a>
+            <small  class="text-primary">Déjà inscrit ?</small>
+        </div>
+        <div style="bottom: 0"> <small class="text-muted">By Jeremy GAU and Yann FORNER</small></div>
+        </div>
 
     </div>
-    <div class="col-4 ">
-        <a class="btn btn-block btn-success" href="/new_user">Inscription</a>
-        <small class="text-primary">Déjà inscrit ?</small>
-        <a class="btn btn-block btn-outline-success" href="/login">Connexion</a>
-    </div>
-</div>
 
 </div>
+
+
+
 {{ > footer}}
