--- a/views/admin.html
+++ b/views/admin.html
@@ -11,7 +11,8 @@
     {{/isAdd}}
     </p>
     <br>
-    <table class="table table-striped">
+    <div class="table-responsive">
+        <table class="table table-striped ">
         <thead>
         <tr>
             <th scope="col">#</th>
@@ -59,6 +60,7 @@
         </form>
         </tbody>
     </table>
+    </div>
 
 
 </div>
