--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,9 @@
 {{ > header}}
 <div class="container-fluid row" style="margin: 0!important;padding: 0 !important">
-    <div class="col-12 col-md-10 row" id="myWelcomeDiv"  style="height: 92vh; background-image: url('https://source.unsplash.com/1800x1080/?object');object-fit: cover;width: 100%;">
-        <div class="col-2"></div>
-        <div class="col-8 text-center">
-            <div  style="background: white;border-radius: 5px;margin-top: 30%;padding: 2px; ">
+    <div class="col-12 col-md-10 row" id="myWelcomeDiv"  style="height: 92.1vh; background-image: url('https://source.unsplash.com/1800x1080/?object');object-fit: cover;width: 100%;">
+        <div class="col-3"></div>
+        <div class="col-6 text-center">
+            <div  style="background: white;border-radius: 5px;margin-top: 30%;padding: 2px; " class=" bg-dark text-white">
                 <h2>uGive</h2>
                 <img src="/img/logo_projet.svg" width="20%">
                 <p>Trouvez les objets dont vous avez besoin dans les propositions de dons des autres utilisateurs</p>
@@ -11,8 +11,8 @@
 
         </div>
     </div>
-    <div class="col-12 col-md-2  container">
-        <div style="margin-top:30%;margin-bottom: 20px" >
+    <div class="col-12 col-md   text-white" style="background: #3d4348" >
+        <div style="margin-top:30%;margin-bottom: 20px" class=" ">
             <a class="btn btn-block btn-success" href="/new_user">Inscription</a>
 
             <a style="margin-top:30%"  class="btn btn-block btn-outline-success" href="/login">Connexion</a>
