--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 {{ > header}}
 <div class="container-fluid row" style="margin: 0!important;padding: 0 !important">
-    <div class="col-12 col-md-10 row" id="myWelcomeDiv"  style="height: 92.1vh; background-image: url('https://source.unsplash.com/1800x1080/?object');object-fit: cover;width: 100%;">
+    <div class="col-12 col-md-10 row" id="myWelcomeDiv"  style="height: 95vh !important; background-image: url('https://source.unsplash.com/1800x1080/?object');object-fit: cover;width: 100%;">
         <div class="col-3"></div>
         <div class="col-6 text-center">
             <div  style="background: white;border-radius: 5px;margin-top: 30%;padding: 2px; " class=" bg-dark text-white">
