--- a/views/home.html
+++ b/views/home.html
@@ -32,11 +32,7 @@
         <div class="form-group row">
             <label for="object" class="col-sm-2 col-form-label">Objet</label>
             <div class="col-sm-10">
-                <select class="form-control" id="object" name="object">
-                    {{#objects}}
-                    <option>{{name}}</option>
-                    {{/objects}}
-                </select>
+                <input type="text" class="form-control" id="object" name="object">
             </div>
         </div>
         <div class="form-group row">
