Deplacement de nos noms vers la droite sur la page d'acceuil

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
             <a class="btn btn-block btn-outline-success mt-5" href="/login">Connexion</a>
             <small class="text-primary">Déjà inscrit ?</small>
         </div>
-        <small class="text-muted">By Jeremy GAU and Yann FORNER</small>
+        <small class="text-muted float-right">By Jeremy GAU and Yann FORNER</small>
     </div>
 </div>
 
