rectification page d'accueil, l'api de changement de fond d'écran

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 {{ > header}}
 <div class="container-fluid row m-0 p-0">
-    <div class="col-12 col-md-10 row" id="myWelcomeDiv">
+    <div class="col-12 col-md-10 row" id="myWelcomeDiv" style=" background-image: url('{{myUrl}}');">
         <div class="col-3"></div>
         <div class="col-6 text-center">
             <div id="div-title" class="bg-dark text-white rounded-lg">
