--- a/views/admin.html
+++ b/views/admin.html
@@ -29,27 +29,27 @@
         <tbody>
         {{#users}}
         <tr>
-            <td scope="row">{{id}}</td>
-            <td scope="col">{{password}}</td>
-            <td scope="col">{{surname}}</td>
-            <td scope="col">{{name}}</td>
-            <td scope="col">{{city}}</td>
-            <td scope="col">{{mail}}</td>
-            <td scope="col">{{phone}}</td>
-            <td scope="col">{{role}}</td>
-            <td scope="col"><a class="btn btn-danger" href="/delete/{{id}}">Supprimer</a></td>
+            <th scope="row">{{id}}</th>
+            <td>{{password}}</td>
+            <td>{{surname}}</td>
+            <td>{{name}}</td>
+            <td>{{city}}</td>
+            <td>{{mail}}</td>
+            <td>{{phone}}</td>
+            <td>{{role}}</td>
+            <td><a class="btn btn-danger" href="/delete/{{id}}">Supprimer</a></td>
         </tr>
         {{/users}}
         <form method="post" action="/add_user">
         <tr>
-            <td scope="row">new</td>
-            <td scope="col"><input name="password" type="password" class="form-control" id="exampleInputPassword1"></td>
-            <td scope="col"><input name="surname" type="text" class="form-control" id="surname"></td>
-            <td scope="col"><input name="name" type="text" class="form-control" id="name"></td>
-            <td scope="col"><input name="city" type="text" class="form-control" id="city"></td>
-            <td scope="col"><input name="mail" type="email" class="form-control" id="email"></td>
-            <td scope="col"><input name="phone" type="text" class="form-control" id="phone"></td>
-            <td scope="col">
+            <th scope="row">new</th>
+            <td><input name="password" type="password" class="form-control" id="exampleInputPassword1"></td>
+            <td><input name="surname" type="text" class="form-control" id="surname"></td>
+            <td><input name="name" type="text" class="form-control" id="name"></td>
+            <td><input name="city" type="text" class="form-control" id="city"></td>
+            <td><input name="mail" type="email" class="form-control" id="email"></td>
+            <td><input name="phone" type="text" class="form-control" id="phone"></td>
+            <td>
                 <select name="role" class="form-control" id="exampleFormControlSelect1">
                     <option>user</option>
                     <option>admin</option>
