--- a/views/edit-profile.html
+++ b/views/edit-profile.html
@@ -35,7 +35,14 @@
             <label for="exampleInputPassword1">Mot de passe</label>
             <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
         </div>
-        <button type="submit" class="btn btn-primary">Valider les changements</button>
+        <div class="row text-center">
+            <div class="col">
+                <a class="btn btn-secondary" href="/profile">Annuler</a>
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-primary">Valider les changements</button>
+            </div>
+        </div>
     </form>
     {{/myUser}}
 </div>
