--- a/views/edit-profile.html
+++ b/views/edit-profile.html
@@ -31,26 +31,35 @@
             <label for="city">Ville</label>
             <input name="city" type="text" class="form-control" id="city" value="{{city}}" required>
         </div>
-        <div class="form-row">
-            <div class="form-group col-md-6 col-sm-12">
-                <label for="exampleInputPassword1">Mot de passe</label>
-                <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
-            </div>
-            <div class="form-group col-md-6 col-sm-12 text-center">
-                <label for="editpwd"></label>
-                <a href="/edit-password" class="btn btn-danger" id="editpwd">Modifier le mot de passe</a>
-            </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Mot de passe</label>
+            <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
         </div>
-        <div class="row text-center">
-            <div class="col">
+        <div class="row">
+            <div class="col text-left">
                 <a class="btn btn-secondary" href="/profile">Annuler</a>
             </div>
-            <div class="col">
-                <button type="submit" class="btn btn-primary">Valider les changements</button>
+            <div class="col text-right">
+                <button type="submit" class="btn btn-primary">Valider</button>
             </div>
         </div>
     </form>
     {{/myUser}}
+    <hr>
+    <h4>Modifier le mot de passe</h4>
+    <form method="post" action="/edit-password">
+        <div class="form-group">
+            <label for="current_password">Mot de passe actuel</label>
+            <input type="password" class="form-control" id="current_password" name="current_password">
+        </div>
+        <div class="form-group">
+            <label for="new_password">Nouveau mot de passe</label>
+            <input type="password" class="form-control" id="new_password" name="new_password">
+        </div>
+        <div class="col text-center">
+            <button type="submit" class="btn btn-primary">Valider</button>
+        </div>
+    </form>
 </div>
 
 {{> footer}}
