--- a/views/edit-profile.html
+++ b/views/edit-profile.html
@@ -21,19 +21,19 @@
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input name="mail" type="email" class="form-control" id="email" value="{{mail}}" required>
+            <input name="mail" type="email" class="form-control" id="email" value="{{mail}}" pattern="^[\w\-\.]+@[\w\-]{2,}\.[a-zA-Z]{2,}$" required>
         </div>
         <div class="form-group">
             <label for="phone">Numéro de téléphone</label>
-            <input name="phone" type="text" class="form-control" id="phone" value="{{phone}}">
+            <input name="phone" type="text" class="form-control" id="phone" value="{{phone}}" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$">
         </div>
         <div class="form-group">
             <label for="city">Ville</label>
             <input name="city" type="text" class="form-control" id="city" value="{{city}}" required>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Mot de passe</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
+            <label for="password">Mot de passe</label>
+            <input name="password" type="password" class="form-control" id="password" required>
         </div>
         <div class="row">
             <div class="col text-left">
@@ -53,8 +53,12 @@
             <input type="password" class="form-control" id="current_password" name="current_password">
         </div>
         <div class="form-group">
-            <label for="new_password">Nouveau mot de passe</label>
-            <input type="password" class="form-control" id="new_password" name="new_password">
+            <label for="new_password1">Nouveau mot de passe</label>
+            <input type="password" class="form-control" id="new_password1" name="new_password1">
+        </div>
+        <div class="form-group">
+            <label for="new_password2">Nouveau mot de passe</label>
+            <input type="password" class="form-control" id="new_password2" name="new_password2">
         </div>
         <div class="col text-center">
             <button type="submit" class="btn btn-primary">Valider</button>
