--- a/views/new_user.html
+++ b/views/new_user.html
@@ -9,8 +9,8 @@
             <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email.</small>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Mot de passe</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
+            <label for="password">Mot de passe</label>
+            <input name="password" type="password" class="form-control" id="password" required>
         </div>
         <div class="form-group">
             <label for="name">Prénom</label>
