--- a/views/edit-profile.html
+++ b/views/edit-profile.html
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
             <label for="phone">Numéro de téléphone</label>
-            <input name="phone" type="text" class="form-control" id="phone" value="{{phone}}" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$">
+            <input name="phone" type="text" class="form-control" id="phone" value="{{phone}}" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" required>
         </div>
         <div class="form-group">
             <label for="city">Ville</label>
@@ -50,15 +50,15 @@
     <form method="post" action="/edit-password">
         <div class="form-group">
             <label for="current_password">Mot de passe actuel</label>
-            <input type="password" class="form-control" id="current_password" name="current_password">
+            <input type="password" class="form-control" id="current_password" name="current_password" required>
         </div>
         <div class="form-group">
             <label for="new_password1">Nouveau mot de passe</label>
-            <input type="password" class="form-control" id="new_password1" name="new_password1">
+            <input type="password" class="form-control" id="new_password1" name="new_password1" pattern="^.{5,}$" required>
         </div>
         <div class="form-group">
             <label for="new_password2">Nouveau mot de passe</label>
-            <input type="password" class="form-control" id="new_password2" name="new_password2">
+            <input type="password" class="form-control" id="new_password2" name="new_password2" pattern="^.{5,}$" required>
         </div>
         <div class="col text-center">
             <button type="submit" class="btn btn-primary">Valider</button>
