--- a/views/new_user.html
+++ b/views/new_user.html
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
             <label for="password">Mot de passe</label>
-            <input name="password" type="password" class="form-control" id="password" required>
+            <input name="password" type="password" class="form-control" id="password" pattern="^.{5,}$" required>
         </div>
         <div class="form-group">
             <label for="name">Prénom</label>
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
             <label for="phone">Numéro de téléphone</label>
-            <input name="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" type="text" class="form-control" id="phone">
+            <input name="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" type="text" class="form-control" id="phone" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
