Ajout de correspondance des utilisateurs + la prise en compte de la distance entre eux

--- a/views/home.html
+++ b/views/home.html
@@ -14,6 +14,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{user.surname}} {{user.name}}</h5>
                     <p class="card-text">{{object}}</p>
+                    <p> à {{distance}} km</p>
                     <a href="/user/{{user.id}}" class="btn btn-primary">Voir le profil</a>
                 </div>
             </div>
