--- a/views/new_user.html
+++ b/views/new_user.html
@@ -13,7 +13,7 @@
             <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email.</small>
         </div>
         <div class="form-group">
-            <label for="password">Mot de passe</label>
+            <label for="password">Mot de passe (au moins 5 caractères)</label>
             <input name="password" type="password" class="form-control" id="password" pattern="^.{5,}$" required>
         </div>
         <div class="form-group">
