--- a/views/new_user.html
+++ b/views/new_user.html
@@ -9,7 +9,7 @@
     <form method="post" action="/new_user">
         <div class="form-group">
             <label for="email">Email (sera votre identifiant)</label>
-            <input name="mail" type="email" class="form-control" id="email" pattern="^[\w\-\.]+@[\w\-]{2,}\.[a-zA-Z]{2,}$" required>
+            <input name="mail" type="email" class="form-control" id="email" pattern="^[\w\-\.]+@[\w\-]{2,}\.[a-zA-Z]{2,}$" value="{{entries.mail}}" required>
             <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email.</small>
         </div>
         <div class="form-group">
@@ -18,19 +18,19 @@
         </div>
         <div class="form-group">
             <label for="name">Prénom</label>
-            <input name="name" type="text" class="form-control" id="name" required>
+            <input name="name" type="text" class="form-control" id="name" value="{{entries.name}}" required>
         </div>
         <div class="form-group">
             <label for="surname">Nom</label>
-            <input name="surname" type="text" class="form-control" id="surname" required>
+            <input name="surname" type="text" class="form-control" id="surname" value="{{entries.surname}}" required>
         </div>
         <div class="form-group">
             <label for="city">Ville</label>
-            <input name="city" type="text" class="form-control" id="city" required>
+            <input name="city" type="text" class="form-control" id="city" value="{{entries.city}}" required>
         </div>
         <div class="form-group">
             <label for="phone">Numéro de téléphone</label>
-            <input name="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" type="text" class="form-control" id="phone" required>
+            <input name="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" type="text" class="form-control" id="phone" value="{{entries.phone}}" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
